# livekeet

./: .gitignore  Makefile  PRIVACY_AUDIT.md  README.md  call.md  diarization.py  diarization_pyannote.py  livekeet.py  livekeet_cleanup.py  livekeet_models.py  pyproject.toml  stream_transcribe.py  test-mic.md  test.md  test2.md  test3.md  test_vad.md  transcript.md
audiocapture/: Package.swift
audiocapture/Sources/audiocapture/: main.swift
tests/: test_cleanup.py  test_cli.py  test_diarization.py  test_diarization_pyannote.py  test_models.py
