[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livekeet"
version = "0.1.4"
description = "Real-time audio transcription to markdown using NVIDIA Parakeet via MLX. Optimized for Apple Silicon."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "numpy<2.4",
    "parakeet-mlx>=0.5.0",
    "sounddevice>=0.5.5",
    "webrtcvad-wheels>=2.0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
livekeet = "livekeet:main"

[tool.uv]
package = true
