[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livekeet"
version = "0.1.18"
description = "Real-time audio transcription to markdown using NVIDIA Parakeet via MLX. Optimized for Apple Silicon."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "numpy<2.5",
    "parakeet-mlx>=0.5.1",
    "pyannote-audio>=4.0",
    "sounddevice>=0.5.5",
    "torch>=2.0",
    "torchaudio>=2.0",
    "webrtcvad-wheels>=2.0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
]
cleanup = [
    "claude-runner>=0.1.1",
]

[project.scripts]
livekeet = "livekeet:main"

[tool.hatch.build.targets.wheel]
packages = ["livekeet.py", "livekeet_cleanup.py", "livekeet_models.py", "diarization.py", "diarization_pyannote.py"]

[tool.uv]
package = true
